--- a/index.html
+++ b/index.html
@@ -6,6 +6,43 @@
     <title>Document</title>
 </head>
 <body>
-    <h3>I'm logesh hii</h3>
+    <h3>course</h3>
+    <ul>
+        <li>AIML</li>
+        <li>AIDS</li>
+        <li>ECE</li>
+        <li>CSE</li>
+        <li>IT</li>
+    </ul>
+    <ol>
+        <li>AIML</li>
+        <li>AIDS</li>
+        <li>ECE</li>
+        <li>CSE</li>
+        <li>IT</li>
+    </ol>
+    <br>
+    <form>
+        <label for="name">Name:</label>
+        <input type="text" id="name" name="name"><br>
+        <label for="description">Description:</label><br>
+        <textarea id="description" name="description" rows="4" cols="50"></textarea><br>
+        <label for="course">Select Course:</label>
+        <select id="course" name="course">
+            <option value="AIML">AIML</option>
+            <option value="AIDS">AIDS</option>
+            <option value="ECE">ECE</option>
+            <option value="CSE">CSE</option>
+            <option value="IT">IT</option>
+        </select><br>
+        <label for="gender">Gender:</label>
+        <select name="Gender">
+            <option value="M">Male</option>
+            <option value="F">Female</option>
+            <option value="O">Other</option>
+        </select>
+        <br>
+        <input type="submit" value="Submit">
+    </form>
 </body>
 </html>
