--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <h3>course</h3>
     <ul>
-        <li>AIML</li>
+        <li id="a">AIML</li>
         <li>AIDS</li>
         <li>ECE</li>
         <li>CSE</li>
@@ -44,5 +44,9 @@
         <br>
         <input type="submit" value="Submit">
     </form>
+<script>
+   var a= document.getElementById("name");
+   console.log(a);
+</script>
 </body>
 </html>
